--- a/TestPrograms/StackAndQueue/StackAndQueue.csproj
+++ b/TestPrograms/StackAndQueue/StackAndQueue.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{512C2740-A8ED-4958-8847-686980C4548E}</ProjectGuid>
+    <ProjectGuid>{0224B639-959D-4C1E-AB8B-787D1B338688}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>FibonacciSeries</RootNamespace>
-    <AssemblyName>FibonacciSeries</AssemblyName>
+    <RootNamespace>StackAndQueue</RootNamespace>
+    <AssemblyName>StackAndQueue</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,7 +43,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Fibonacci.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
